...
    
    private func showNextQuestionOrResults() {
        viewController?.buttonsState(enabled: true)
        
        if self.isLastQuestion() {
            
            let quizResultsViewModel = QuizResultsViewModel(title: "Этот раунд окончен!", text: makeResultsMessage(), buttonText: "Сыграть еще раз")
            viewController?.show(quiz: quizResultsViewModel)
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion(index: currentQuestionIndex)
            viewController?.renderQuestion()
        }
...
